ec2.tf
# resource "aws_instance" "aws_ec2_optomized_ecs_aa" {
#   ami = ami-0607c90293527de0e # Optimized with ECS as per the following command
# }
